--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -18,7 +18,9 @@
 	--hamburger-bar-width: 20px;
 	--hamburger-bar-height: 3px;
 	--hamburger-gap: 3px;
-	--hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
+	--hamburger-height: calc(
+		(var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
+	);
 }
 
 html {
@@ -78,7 +80,6 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
-
 	// hide horizontal overflow
 	body {
 		overflow-x: hidden;
@@ -168,10 +169,9 @@ code {
 			}
 
 			.hamburger-menu {
-
 				&::before,
 				&::after,
-				>input {
+				> input {
 					background-color: var(--gray-400);
 				}
 			}
@@ -190,7 +190,7 @@ code {
 
 			&::before,
 			&::after,
-			>input {
+			> input {
 				content: "";
 				width: var(--hamburger-bar-width);
 				height: var(--hamburger-bar-height);
@@ -200,7 +200,7 @@ code {
 				transition: all 500ms ease-in-out;
 			}
 
-			>input {
+			> input {
 				appearance: none;
 				-webkit-appearance: none;
 				padding: 0;
@@ -302,6 +302,54 @@ code {
 
 				.tableRowHeader {
 					border-bottom: 1px solid var(--gray-300);
+				}
+			}
+		}
+
+		#theTeamSection {
+			.teamMembers {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				gap: 20px;
+
+				.teamMember {
+					display: flex;
+					align-items: center;
+					column-gap: 10px;
+					border-radius: 6px;
+					padding: 10px;
+					background-color: var(--gray-100);
+					transition: all 500ms ease-in-out;
+
+					.memberImage {
+						border-radius: 50%;
+						width: 60px;
+						height: 60px;
+					}
+
+					.memberInfo {
+						padding: 10px;
+
+						.memberName {
+							color: var(--primary-700);
+							transition: all 500ms ease-in-out;
+						}
+
+						.memberPosition {
+							font-size: 13px;
+						}
+					}
+
+					&:hover {
+						background-color: var(--primary-700);
+						color: white;
+
+						.memberInfo {
+							.memberName {
+								color: white;
+							}
+						}
+					}
 				}
 			}
 		}
