--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -16,10 +16,11 @@ body {
     &.silverBox-overlay {
         width: 100vw;
         height: 100vh;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         right: 0;
+        bottom: 0;
         display: flex;
         align-items: center;
         justify-content: center;
