style(change): change some styles

--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -94,7 +94,7 @@
             content: "";
             position: absolute;
             top: 0;
-            right: -1px;
+            right: 0;
             width: 30px;
             height: 3px;
             background-color: #E62E05;
