--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -1,5 +1,5 @@
 /* tick */
-#silverBox-tick-mark {
+.silverBox-tick-mark {
     position: relative;
     width: 50px;
     height: 50px;
@@ -11,7 +11,7 @@
     padding: 10px;
     animation: 1s appear;
 
-    #inside {
+    .inside {
         position: absolute;
         width: 50%;
         height: 10px;
@@ -24,7 +24,7 @@
 
 
 /* info */
-#silverBox-info {
+.silverBox-info {
     border: 3px solid;
     width: 50px;
     height: 50px;
@@ -41,7 +41,7 @@
 }
 
 /* question */
-#silverBox-question {
+.silverBox-question {
     border: 3px solid;
     width: 50px;
     height: 50px;
@@ -58,7 +58,7 @@
 
 
 /* warning */
-#silverBox-warning {
+.silverBox-warning {
     border: 3px solid;
     width: 50px;
     height: 50px;
@@ -74,7 +74,7 @@
 }
 
 /* x mark */
-#silverBox-error {
+.silverBox-error {
     width: 50px;
     height: 50px;
     border-radius: 50%;
