--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -4,376 +4,382 @@
 
 // default font size for desktop
 :root {
-	font-size: 16px;
+    font-size: 16px;
 }
 
 // default font size for mobile
 @media only screen and (max-width: 900px) {
-	:root {
-		font-size: 14px;
-	}
+    :root {
+        font-size: 14px;
+    }
 }
 
 :root {
-	--hamburger-bar-width: 20px;
-	--hamburger-bar-height: 3px;
-	--hamburger-gap: 3px;
-	--hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
+    --hamburger-bar-width: 20px;
+    --hamburger-bar-height: 3px;
+    --hamburger-gap: 3px;
+    --hamburger-height: calc(
+        (var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
+    );
 }
 
 html {
-	scroll-behavior: smooth;
-	&[data-theme="light"] {
-		// white and black
-		--white-in-white: #fff;
-		--black-in-white: #000;
+    scroll-behavior: smooth;
+    &[data-theme="light"] {
+        // white and black
+        --white-in-white: #fff;
+        --black-in-white: #000;
 
-		// gray
-		--gray-100: #efefef;
-		--gray-300: #d9d9d9;
-		--gray-400: #c0c0c0;
-		--gray-500: #717171;
-		--gray-700: #353535;
+        // gray
+        --gray-100: #efefef;
+        --gray-300: #d9d9d9;
+        --gray-400: #c0c0c0;
+        --gray-500: #717171;
+        --gray-700: #353535;
 
-		// theme
-		--primary-700: #284b63;
-		--secondary-700: #3c6e71;
+        // theme
+        --primary-700: #284b63;
+        --secondary-700: #3c6e71;
 
-		// blue
-		--blue-100: #caf0f8;
-		--blue-300: #90e0ef;
-		--blue-500: #00b4d8;
-		--blue-700: #0077b6;
-		--blue-900: #03045e;
-	}
+        // blue
+        --blue-100: #caf0f8;
+        --blue-300: #90e0ef;
+        --blue-500: #00b4d8;
+        --blue-700: #0077b6;
+        --blue-900: #03045e;
+    }
 
-	&[data-theme="dark"] {
-		// white and black
-		--white-in-white: #000;
-		--black-in-white: #fff;
+    &[data-theme="dark"] {
+        // white and black
+        --white-in-white: #000;
+        --black-in-white: #fff;
 
-		// gray
-		--gray-100: #efefef;
-		--gray-300: #d9d9d9;
-		--gray-400: #c0c0c0;
-		--gray-500: #454545;
-		--gray-700: #353535;
+        // gray
+        --gray-100: #efefef;
+        --gray-300: #d9d9d9;
+        --gray-400: #c0c0c0;
+        --gray-500: #454545;
+        --gray-700: #353535;
 
-		// theme
-		--primary-700: #284b63;
-		--secondary-700: #3c6e71;
+        // theme
+        --primary-700: #284b63;
+        --secondary-700: #3c6e71;
 
-		// blue
-		--blue-100: #caf0f8;
-		--blue-300: #90e0ef;
-		--blue-500: #00b4d8;
-		--blue-700: #0077b6;
-		--blue-900: #03045e;
-	}
+        // blue
+        --blue-100: #caf0f8;
+        --blue-300: #90e0ef;
+        --blue-500: #00b4d8;
+        --blue-700: #0077b6;
+        --blue-900: #03045e;
+    }
 }
 
 // general text color
 body {
-	color: var(--gray-700);
-	font-family: "Source Sans Pro", sans-serif;
+    color: var(--gray-700);
+    font-family: "Source Sans Pro", sans-serif;
 }
 
 @media only screen and (max-width: 900px) {
-
-	// hide horizontal overflow
-	body {
-		overflow-x: hidden;
-	}
+    // hide horizontal overflow
+    body {
+        overflow-x: hidden;
+    }
 }
 
 button {
-	padding: 10px 20px;
-	border-radius: 6px;
-	color: white;
-	width: 50%;
-	background-color: var(--primary-700);
-	margin-top: 20px;
-	transition: 0.1s;
+    padding: 10px 20px;
+    border-radius: 6px;
+    color: white;
+    width: 50%;
+    background-color: var(--primary-700);
+    margin-top: 20px;
+    transition: 0.1s;
 
-	&:hover {
-		background-color: var(--secondary-700);
-	}
+    &:hover {
+        background-color: var(--secondary-700);
+    }
 }
 
-
-
-
 code {
-	border-radius: 4px;
-	text-align: left;
+    border-radius: 4px;
+    text-align: left;
 }
 
 .container {
-	margin: 0 auto;
-	width: 90vw;
-	max-width: 950px;
-	padding: 10px;
+    margin: 0 auto;
+    width: 90vw;
+    max-width: 950px;
+    padding: 10px;
 
-	aside.sidebar {
-		transform: translateX(-75%);
-		position: fixed;
-		left: 10px;
-		display: flex;
-		column-gap: 10px;
-		transition: all 500ms;
-		max-width: max-content;
+    aside.sidebar {
+        transform: translateX(-75%);
+        position: fixed;
+        left: 10px;
+        display: flex;
+        column-gap: 10px;
+        transition: all 500ms;
+        max-width: max-content;
 
-		nav {
-			ul {
-				transition: all 500ms ease-in-out;
-				border-radius: 6px;
-				overflow: hidden;
+        nav {
+            ul {
+                transition: all 500ms ease-in-out;
+                border-radius: 6px;
+                overflow: hidden;
 
-				a {
-					pointer-events: none;
+                a {
+                    pointer-events: none;
 
-					li {
-						padding-right: 60px;
-						transition: all 500ms ease-in-out;
-					}
-				}
-			}
-		}
+                    li {
+                        padding-right: 60px;
+                        transition: all 500ms ease-in-out;
+                    }
+                }
+            }
+        }
 
-		&.show-sidebar {
-			background-color: var(--white-in-white);
-			transform: translateX(0);
+        &.show-sidebar {
+            background-color: var(--white-in-white);
+            transform: translateX(0);
 
-			nav {
-				ul {
-					// padding-top: 35px;
-					box-shadow: 0px 0px 10px #00000033;
+            nav {
+                ul {
+                    // padding-top: 35px;
+                    box-shadow: 0px 0px 10px #00000033;
 
-					a {
-						pointer-events: initial;
+                    a {
+                        pointer-events: initial;
 
-						li {
-							padding: 12px 20px;
-							padding-right: 60px;
-							border-left: 3px solid white;
+                        li {
+                            padding: 12px 20px;
+                            padding-right: 60px;
+                            border-left: 3px solid white;
 
-							&:hover {
-								border-left: 3px solid var(--primary-700);
-								color: var(--primary-700);
-							}
-						}
+                            &:hover {
+                                border-left: 3px solid var(--primary-700);
+                                color: var(--primary-700);
+                            }
+                        }
 
-						&.navigationTitle {
-							pointer-events: none;
-							font-size: 14px;
+                        &.navigationTitle {
+                            pointer-events: none;
+                            font-size: 14px;
 
-							li {
-								border-left: none;
-								border-bottom: 1px solid var(--gray-100);
-								background-color: white;
-								color: var(--gray-700);
-							}
-						}
-					}
-				}
-			}
+                            li {
+                                border-left: none;
+                                border-bottom: 1px solid var(--gray-100);
+                                background-color: white;
+                                color: var(--gray-700);
+                            }
+                        }
+                    }
+                }
+            }
 
-			.hamburger-menu {
+            .hamburger-menu {
+                &::before,
+                &::after,
+                > input {
+                    background-color: var(--gray-400);
+                }
+            }
+        }
 
-				&::before,
-				&::after,
-				>input {
-					background-color: var(--gray-400);
-				}
-			}
-		}
+        .hamburger-menu {
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            gap: var(--hamburger-gap);
+            width: max-content;
+            height: max-content;
+            position: absolute;
+            top: 14px;
+            right: 7px;
 
-		.hamburger-menu {
-			cursor: pointer;
-			display: flex;
-			flex-direction: column;
-			gap: var(--hamburger-gap);
-			width: max-content;
-			height: max-content;
-			position: absolute;
-			top: 14px;
-			right: 7px;
+            &::before,
+            &::after,
+            > input {
+                content: "";
+                width: var(--hamburger-bar-width);
+                height: var(--hamburger-bar-height);
+                background-color: var(--gray-500);
+                border-radius: 900px;
+                transform-origin: left center;
+                transition: all 500ms ease-in-out;
+            }
 
-			&::before,
-			&::after,
-			>input {
-				content: "";
-				width: var(--hamburger-bar-width);
-				height: var(--hamburger-bar-height);
-				background-color: var(--gray-500);
-				border-radius: 900px;
-				transform-origin: left center;
-				transition: all 500ms ease-in-out;
-			}
+            > input {
+                appearance: none;
+                -webkit-appearance: none;
+                padding: 0;
+                margin: 0;
+                outline: none;
+                pointer-events: none;
 
-			>input {
-				appearance: none;
-				-webkit-appearance: none;
-				padding: 0;
-				margin: 0;
-				outline: none;
-				pointer-events: none;
+                &:checked {
+                    opacity: 0;
+                    width: 0;
+                }
+            }
 
-				&:checked {
-					opacity: 0;
-					width: 0;
-				}
-			}
+            &.show-x {
+                --x-width: calc(var(--hamburger-height) * 1.414421356237);
 
-			&.show-x {
-				--x-width: calc(var(--hamburger-height) * 1.414421356237);
+                &::before {
+                    transform: rotate(45deg);
+                    width: var(--x-width);
+                    translate: 0 calc(var(--hamburger-bar-height) / -2);
+                }
 
-				&::before {
-					transform: rotate(45deg);
-					width: var(--x-width);
-					translate: 0 calc(var(--hamburger-bar-height) / -2);
-				}
+                &::after {
+                    transform: rotate(315deg);
+                    width: var(--x-width);
+                    translate: 0 calc(var(--hamburger-bar-height) / 2);
+                }
+            }
+        }
+    }
 
-				&::after {
-					transform: rotate(315deg);
-					width: var(--x-width);
-					translate: 0 calc(var(--hamburger-bar-height) / 2);
-				}
-			}
-		}
-	}
+    main {
+        .sectionHeader {
+            text-align: center;
+            font-size: 20px;
+            color: var(--gray-500);
+            margin-bottom: 20px;
+        }
 
-	main {
-		.sectionHeader {
-			text-align: center;
-			font-size: 20px;
-			color: var(--gray-500);
-			margin-bottom: 20px;
-		}
+        section {
+            margin-bottom: 40px;
+        }
 
-		section {
-			margin-bottom: 40px;
-		}
+        #heroSection {
+            h2.tagline {
+                text-align: center;
+                font-size: 18px;
+                font-weight: 600;
+                margin-bottom: 30px;
+            }
 
-		#heroSection {
-			h2.tagline {
-				text-align: center;
-				font-size: 18px;
-				font-weight: 600;
-				margin-bottom: 30px;
-			}
+            div.whySilverBox {
+                // padding: 0 10px;
+                display: flex;
+                align-items: start;
+                justify-content: space-between;
 
-			div.whySilverBox {
-				// padding: 0 10px;
-				display: flex;
-				align-items: start;
-				justify-content: space-between;
+                div.introduction {
+                    text-align: justify;
+                    max-width: 45%;
+                }
 
-				div.introduction {
-					text-align: justify;
-					max-width: 45%;
-				}
+                img {
+                    width: 45%;
+                }
+            }
+        }
 
-				img {
-					width: 45%;
-				}
-			}
-		}
+        #exampleSection {
+            row-gap: 20px;
+            display: grid;
 
-		#exampleSection {
-			row-gap: 20px;
-			display: grid;
+            .example {
+                display: grid;
+                grid-template-columns: 2fr 3fr;
+                gap: 0 20px;
 
-			.example {
-				display: grid;
-				grid-template-columns: 2fr 3fr;
-				gap: 0 20px;
+                .exampleColumn {
+                    &:first-of-type {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
+                }
+            }
+        }
 
-				.exampleColumn {
-					&:first-of-type {
-						display: flex;
-						flex-direction: column;
-						align-items: center;
-					}
-				}
-			}
+        #documentationSection {
+            .tableWrapper {
+                text-align: start;
+                row-gap: 10px;
+                border: 1px solid var(--gray-300);
+                border-radius: 6px;
 
-		}
+                .tableRowHeader,
+                .tableRow {
+                    display: grid;
+                    grid-template-columns: 1fr 2fr;
+                    column-gap: 10px;
+                    &.document-has-config {
+                        grid-template-columns: none;
+                        grid-template-rows: 2fr;
+                    }
 
-		#documentationSection {
-			.tableWrapper {
-				text-align: start;
-				row-gap: 10px;
-				border: 1px solid var(--gray-300);
-				border-radius: 6px;
+                    .tableColumn {
+                        padding: 20px;
+                        overflow-x: hidden;
+                        &.document-argument {
+                            font-weight: 700;
+                            font-style: italic;
+                            color: #3c6e71;
+                            font-size: 18px;
+                        }
+                    }
 
-				.tableRowHeader,
-				.tableRow {
-					display: grid;
-					grid-template-columns: 1fr 2fr;
-					column-gap: 10px;
+                    .tableHeaderColumn {
+                        color: var(--gray-500) !important;
+                    }
+                }
 
-					.tableColumn {
-						padding: 20px;
-						overflow-x: hidden;
-					}
+                .tableRowHeader {
+                    border-bottom: 1px solid var(--gray-300);
+                }
+            }
+        }
 
-					.tableHeaderColumn {
-						color: var(--gray-500) !important;
-					}
-				}
+        #theTeamSection {
+            .teamMembers {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 20px;
 
-				.tableRowHeader {
-					border-bottom: 1px solid var(--gray-300);
-				}
-			}
-		}
+                .teamMember {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 10px;
+                    border-radius: 6px;
+                    padding: 10px;
+                    transition: all 500ms ease-in-out;
 
-		#theTeamSection {
-			.teamMembers {
-				display: grid;
-				grid-template-columns: repeat(3, 1fr);
-				gap: 20px;
+                    .memberImage {
+                        border-radius: 50%;
+                        width: 60px;
+                        height: 60px;
+                    }
 
-				.teamMember {
-					display: flex;
-					align-items: center;
-					column-gap: 10px;
-					border-radius: 6px;
-					padding: 10px;
-					transition: all 500ms ease-in-out;
+                    .memberInfo {
+                        padding: 10px;
 
-					.memberImage {
-						border-radius: 50%;
-						width: 60px;
-						height: 60px;
-					}
+                        .memberName {
+                            color: var(--primary-700);
+                            transition: all 500ms ease-in-out;
+                        }
 
-					.memberInfo {
-						padding: 10px;
+                        .memberPosition {
+                            font-size: 13px;
+                        }
+                    }
 
-						.memberName {
-							color: var(--primary-700);
-							transition: all 500ms ease-in-out;
-						}
+                    &:hover {
+                        background-color: var(--primary-700);
+                        color: white;
 
-						.memberPosition {
-							font-size: 13px;
-						}
-					}
-
-					&:hover {
-						background-color: var(--primary-700);
-						color: white;
-
-						.memberInfo {
-							.memberName {
-								color: white;
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+                        .memberInfo {
+                            .memberName {
+                                color: white;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
