--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -13,12 +13,12 @@
         --silverBox-confirm-color: #fff;
         --silverBox-confirm-bg-color: #7f56d9;
         --silverBox-confirm-border-color: #7f56d9;
-        --silverBox-confirm-hover-color: #d6bbfb;
+        --silverBox-confirm-hover-color: #a86ff9;
         // deny button
         --silverBox-deny-color: #fff;
         --silverBox-deny-bg-color: #d33;
         --silverBox-deny-border-color: #d33;
-        --silverBox-deny-hover-color: #f75555;
+        --silverBox-deny-hover-color: #fa7070;
         // cancel button
         --silverBox-cancel-color: #475467;
         --silverBox-cancel-bg-color: #fff;
