feat(components/footer): add css file for footer and change some styles

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -31,6 +31,8 @@
         --silverBox-input-placeHolder-color: #475467;
         --silverBox-label-color: #1d2939;
         --silverBox-hint-color: #101828;
+        // footer
+        --solverBox-hr-line-color:#bbbbbb;
     }
 
     &[data-theme="dark"] {
