--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -4,6 +4,7 @@
 @import "./components/header";
 @import "./components/icons";
 @import "./components/loadingAnimation";
+@import "./components/footer";
 
 body {
     background-color: white;
