refactor(components/heade): apply fontSize and fontWeight to title

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -22,6 +22,8 @@
 
     .silverBox-header-title {
         color: var(--silverBox-title-color);
+        font-size: var(--silverBox-title-font-size);
+        font-weight: var(--silverBox-title-font-weight);
     }
 
     .silverBox-header-description {
