style(general): change some general styles

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -17,7 +17,7 @@
 
 .header-wrapper {
     &>* {
-        margin: 5px 0;
+        margin: var(--silverBox-header-items-margin);
     }
 
     .silverBox-header-title {
