--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -32,7 +32,7 @@
         --silverBox-label-color: #1d2939;
         --silverBox-hint-color: #101828;
         // footer
-        --solverBox-hr-line-color:#bbbbbb;
+        --solverBox-hr-line-color: #bbbbbb;
     }
 
     &[data-theme="dark"] {
@@ -70,6 +70,8 @@
     }
 
     // font sizes
+    // header 
+    --silverBox-header-items-margin: 25px 0;
     // title
     --silverBox-title-font-size: 24px;
     --silverBox-title-font-weight: 600;
@@ -92,12 +94,13 @@
     --silverBox-border-radius: 20px;
 
     // inputs
+    --silverBox-inside-input-gap:7px;
     --silverBox-input-parent-justify-content: space-around;
     --silverBox-input-parent-align-items: center;
     --silverBox-input-parent-gap:0;
-    --silverBox-hint-fontSize: 12px;
+    --silverBox-hint-fontSize: 14px;
     --silverBox-input-fontSize: 14px;
-    --silverBox-placeHolder-fontSize: 14px;
+    --silverBox-placeHolder-fontSize: 12px;
 
 
     // icons
