feat(): give class to documentation explanation strings

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -406,6 +406,9 @@ code {
                         &.document-string {
                             color: var(--document-string);
                         }
+                        .document-string {
+                            color: var(--document-string);
+                        }
                         &.document-boolean {
                             color: var(--document-boolean);
                         }
